--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
   <!-- CSS -->
   <link rel="stylesheet" href="./css/estilo.css">
 
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+  <script type="text/javascript">
+    emailjs.init('_8jBlctSspVmQys4o')
+  </script>
+
   <title>Terrasol - Inicio</title>
 </head>
 
 <body>
 
   <!-- INICIO HEADER -->
-  <header>
+  <header class="header"> 
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
 
@@ -42,23 +48,23 @@
           <ul class="navbar-nav ms-auto">
 
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Inicio</a>
+              <a href="#home" class="nav-link">Inicio</a>
             </li>
 
             <li class="nav-item">
-              <a href="./pages/servicios.html" class="nav-link">Servicios</a>
+              <a href="#servicios" class="nav-link">Servicios</a>
             </li>
 
             <li class="nav-item">
-              <a href="./pages/quienes.html" class="nav-link">Quienes Somos</a>
+              <a href="#galeria" class="nav-link">Galería</a>
             </li>
 
             <li class="nav-item">
-              <a href="./pages/galeria.html" class="nav-link">Galería</a>
+              <a href="#quienes-somos" class="nav-link">Quienes Somos</a>
             </li>
 
             <li class="nav-item">
-              <a href="./pages/contacto.html" class="nav-link">Contacto</a>
+              <a href="#contacto" class="nav-link">Contacto</a>
             </li>
 
           </ul>
@@ -72,34 +78,260 @@
 
   <!-- INICIO MAIN -->
   <main>
-    <h1 class="text-center">Terrasol - Barrio Abierto</h1>
+    <h1 class="text-center mt-5" id="home">Terrasol - <b>Barrio Abierto</b></h1>
 
     <!-- INICIO SECTION INTRODUCCION -->
-    <section class="section-intro mt-3 p-2">
+    <section class="section-intro mt-5 p-2">
+      <h3 class="text-center">El proyecto de urbanización más grande de Bell Ville</h3>
       <p class="text-center">Su entrada Principal se encuentra sobre Calle Cordoba a la altura aproximada de 1900 ( Hoy
         B° Eduardo Angeloz).
-        En el ingreso se proyecta la Construcción de una Galeria Comercial, de estilo Moderno, con Locales pensados para
-        satisfacer las diferentes necesidades de la zona.
+        En el ingreso <b>se proyecta la Construcción de una Galeria Comercial, de estilo Moderno, con Locales pensados para
+        satisfacer las diferentes necesidades de la zona.</b>
       </p>
     </section>
 
-    <!-- INICIO SECTION NOVEDADES -->
-    <section class="section-novedades mt-3 rounded">
-      <h2>Novedades</h2>
+    <!-- INICIO SECTION INFORMACION -->
+    <section class="section-info mt-5">
+      <div class="container">
+        <div class="row">
 
-      <div id="carouselExample" class="carousel slide mt-5 p-4">
+          <div class="col-lg-4 mb-4 text-center">
+            <div class="card-info shadow">
+              <h3>Lotes</h3>
+              <p>Lotes desde 500 m2 a 800 m2</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mb-4 text-center">
+            <div class="card-info shadow">
+              <h3>Proyecto</h3>
+              <p>Está dividido en 3 etapas de comercialización</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mb-4 text-center">
+            <div class="card-info shadow">
+              <h3>Pago</h3>
+              <p>Pagando de contado, 10% de descuento</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- INICIO SECTION UBICACION -->
+  <!--   <section class="section-ubicacion mt-5 rounded">
+      <h3 class="text-center">Ubicación</h3>
+
+      <div class="row m-5 container-ubi-img">
+        <div class="col-lg-4 mb-4">
+          <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage1">
+            <img class="w-100 mb-4 img-fluid rounded img-style" src="./assets/primeraEtapa.jpg"
+              alt="Plano primera etapa">
+          </a>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage2">
+            <img class="w-100 mb-4 img-fluid rounded img-style" src="./assets/loteoAereo.jpg" alt="Imagen Aerea">
+          </a>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage3">
+            <img class="w-100 mb-4 img-fluid rounded img-style" src="./assets/lotesMarcados.jpg"
+              alt="Lotes Marcados ficticios">
+          </a>
+        </div>
+      </div> -->
+
+      <!-- Modal 1 -->
+      <!-- <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+          <div class="modal-content">
+            <img src="./assets/primeraEtapa.jpg" alt="Plano primera etapa">
+          </div>
+        </div>
+      </div> -->
+
+      <!-- Modal 2 -->
+     <!--  <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage2">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+          <div class="modal-content">
+            <img src="./assets/loteoAereo.jpg" alt="toma aerea del loteo">
+          </div>
+        </div>
+      </div> -->
+
+      <!-- Modal 3 -->
+    <!--   <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage3">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+          <div class="modal-content">
+            <img src="./assets/lotesMarcados.jpg" alt="Lotes marcados">
+          </div>
+        </div>
+      </div>
+
+    </section> -->
+
+    <!-- INICIO SERVICIOS -->
+    <section class="section-servicios mt-5" id="servicios">
+      <h2 class="text-center">Servicios</h2>
+
+      <div class="container mt-4">
+        <div class="row">
+
+          <div class="col-md-3 mb-4">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Gas Natural</h4>
+              </div>
+              <img src="./assets/fuego.png" class="justify-content-center" alt="Gas Natural" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-md-3 mb-4">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Red de Cloacas</h4>
+              </div>
+              <img src="./assets/tuberia-de-agua.png" alt="Cloacas" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-md-3 mb-4">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Cordón Cuneta</h4>
+              </div>
+              <img src="./assets/cordon-cuneta.png" alt="Cordon Cuneta" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-md-3 mb-4">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Alumbrado Público Led Subterráneo</h4>
+              </div>
+              <img src="./assets/farola.png" alt="Luces" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-md-3 mb-4">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Calles Pavimentadas</h4>
+              </div>
+              <img src="./assets/carretera.png" alt="Calle" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-md-3 mb-4">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Red de Agua Potable</h4>
+              </div>
+              <img src="./assets/agua-del-grifo.png" alt="Agua" class="img-fluid">
+            </div>
+          </div>
+
+
+          <div class="col-md-3 mb-4">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Red Eléctrica Subterránea</h4>
+              </div>
+              <img src="./assets/sistema-de-energia.png" alt="Red electrica" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-md-3 mb-4">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Boulevard de Ingreso</h4>
+              </div>
+              <img src="./assets/calle-de-doble-sentido.png" alt="Avenida" class="img-fluid">
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
+
+    <section class="section-amenities mt-5">
+      <h2 class="text-center">Amenities</h2>
+
+      <div class="container mt-4">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
+          <div class="col">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Centro Comercial</h4>
+              </div>
+              <img src="./assets/bolsas-de-compra.png" alt="Centro comercial" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Espacios Verdes Naturales</h4>
+              </div>
+              <img src="./assets/arbol-de-hoja-caduca.png" alt="espacios verdes" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Juegos Recreativos</h4>
+              </div>
+              <img src="./assets/columpios.png" alt="columpios" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Sector Deportivo</h4>
+              </div>
+              <img src="./assets/deportes.png" alt="Pelotas" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow">
+              <div class="card-body text-center">
+                <h4 class="card-title">Circuito Aeróbico</h4>
+              </div>
+              <img src="./assets/aerobic.png" alt="Persona haciendo ejercicio" class="img-fluid">
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- FIN SERVICIOS -->
+    <!-- INICIO GALERIA -->
+    <section class="section-carrusel-ingreso mt-5" id="galeria">
+      <h2 class="text-center">Imágenes futuristas sobre proyectos planeados de Terrasol.</h2>
+      <p class="text-center"> <b>Galería Comercial, Estadio de Voley y Complejo de Departamentos</b>. Se encontrarían en
+        el ingreso por calle Córdoba</p>
+      <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/deportes.png" alt="" height="100">
-            <p class="text-center w-100">La primer etapa del loteo ya está en marcha</p>
+            <img src="../assets/IMG-20230829-WA0017.jpg" class="d-block w-100 rounded" alt="Imagen ilustrativa">
           </div>
           <div class="carousel-item">
-            <img src="./assets/carretera.png" alt="" height="100">
-            <p class="d-block w-100">Ya se están realizando las obras para las calles</p>
+            <img src="../assets/IMG-20230829-WA0002.jpg" class="d-block w-100 rounded" alt="Imagen ilustrativa">
           </div>
           <div class="carousel-item">
-            <img src="./assets/fuego.png" alt="" height="100">
-            <p class="d-block w-100">Se está colocando el gas</p>
+            <img src="../assets/IMG-20230829-WA0005.jpg" class="d-block w-100 rounded" alt="Imagen ilustrativa">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/IMG-20230829-WA0014.jpg" class="d-block w-100 rounded" alt="Imagen ilustrativa">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -112,89 +344,73 @@
         </button>
       </div>
     </section>
+    <!-- FIN GALERIA -->
 
-    <!-- INICIO SECTION INFORMACION -->
-    <section class="section-info mt-5">
+    <!-- INICIO QUIENES SOMOS -->
+    <h2 class="text-center" id="quienes-somos">Sobre Nosotros</h>
+      <section class="container mt-5 p-3 rounded text-center section-sobreNos">
+        <h3 class="text-center">Nuestro Equipo</h3>
+        <p class="text-center">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, repellendus?
+        </p>
+      </section>
 
-      <div class="container">
-        <div class="row">
+      <section class="container mt-5 p-3 rounded text-center section-sobreNos">
+        <h3 class="text-center">Experiencia y Trayectoria</h3>
+        <p class="text-center">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, repellendus?
+        </p>
+      </section>
 
-          <div class="col-lg-4 mb-4">
-            <div class="card-info shadow">
-              <h3>Lotes</h3>
-              <p>Lotes desde 500 m2 a 800 m2</p>
+      <section class="container mt-5 p-3 rounded text-center section-sobreNos">
+        <h3 class="text-center">Nuestra Misión</h3>
+        <p class="text-center">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti saepe earum nihil blanditiis
+          accusantium, quia deleniti, aspernatur, eius soluta amet quisquam laboriosam ex veniam. Tempore unde
+          facere ab tenetur
+      </section>
+      <!-- FIN QUIENES SOMOS -->
+
+      <!-- INICIO CONTACTO -->
+      <section class="container section-contacto rounded mt-4">
+        <h2 id="contacto">Contacto</h2>
+        <div class="container d-flex justify-content-center align-items-center">
+          <form class="formulario rounded" id="contactForm">
+
+            <div class="field">
+              <label for="from_name">Nombre y Apellido</label>
+              <input type="text" class="form-control" id="from_name" name="from_name" required>
             </div>
-          </div>
 
-          <div class="col-lg-4 mb-4">
-            <div class="card-info shadow">
-              <h3>Proyecto</h3>
-              <p>Está dividido en 3 etapas de comercialización</p>
+            <div class="field mt-3">
+              <label for="email_id">Correo Electrónico</label>
+              <input type="email" class="form-control" id="email_id" name="email_id" required>
+              <small class="form-text text-light">Ej. terrasol@gmail.com</small>
             </div>
-          </div>
 
-          <div class="col-lg-4 mb-4">
-            <div class="card-info shadow">
-              <h3>Pago</h3>
-              <p>Pagando de contado, 10% de descuento</p>
+            <div class="field mt-3">
+              <label for="number">Teléfono</label>
+              <input type="tel" class="form-control" id="number" name="number" pattern="[0-9]{10}" required>
+              <small class="form-text text-light">Ej. 3537123456</small>
             </div>
-          </div>
 
+            <div class="field mt-3">
+              <label for="message">Consulta tus dudas</label>
+              <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+            </div>
+
+            <div id="response" class="mt-3"></div>
+
+            <div class="container-btn">
+              <button type="submit" id="button" class="btn m-2">Enviar</button>
+              <button type="reset" class="btn m-2">Reiniciar Formulario</button>
+            </div>
+
+          </form>
         </div>
-      </div>
-    </section>
 
-    <!-- INICIO SECTION UBICACION -->
-    <section class="section-ubicacion mt-5 rounded">
-      <h3 class="text-center">Ubicación</h3>
-
-      <div class="row m-5 container-ubi-img">
-        <div class="col-lg-4 mb-4">
-          <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage1">
-            <img class="w-100 mb-4 img-fluid rounded img-style" src="./assets/primeraEtapa.jpg" alt="Plano primera etapa">
-          </a>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage2">
-            <img class="w-100 mb-4 img-fluid rounded img-style" src="./assets/loteoAereo.jpg" alt="Imagen Aerea">
-          </a>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage3">
-            <img class="w-100 mb-4 img-fluid rounded img-style" src="./assets/lotesMarcados.jpg" alt="Lotes Marcados ficticios">
-          </a>
-        </div>
-      </div>
-
-      <!-- Modal 1 -->
-      <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-          <div class="modal-content">
-            <img src="./assets/primeraEtapa.jpg" alt="Plano primera etapa">
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal 2 -->
-      <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage2">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-          <div class="modal-content">
-            <img src="./assets/loteoAereo.jpg" alt="toma aerea del loteo">
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal 3 -->
-      <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage3">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-          <div class="modal-content">
-            <img src="./assets/lotesMarcados.jpg" alt="Lotes marcados">
-          </div>
-        </div>
-      </div>
-
-    </section>
-
+      </section>
+      <!-- FIN CONTACTO -->
   </main>
   <!-- FIN MAIN -->
 
@@ -233,7 +449,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
     </script>
-
   <script src="./index.js"></script>
 
 </body>
